--- a/dom/tests/mochitest/webcomponents/mochitest.ini
+++ b/dom/tests/mochitest/webcomponents/mochitest.ini
@@ -25,6 +25,7 @@ skip-if = true # disabled - See bug 1390396
 support-files =
   test_upgrade_page.html
   upgrade_tests.js
+[test_custom_element_runtime_exception.html]
 [test_nested_content_element.html]
 [test_dest_insertion_points.html]
 [test_fallback_dest_insertion_points.html]
