--- a/dom/html/test/forms/mochitest.ini
+++ b/dom/html/test/forms/mochitest.ini
@@ -110,3 +110,4 @@ skip-if = android_version == '18' || os == 'mac'
 [test_valueasnumber_attribute.html]
 [test_validation_not_in_doc.html]
 [test_reportValidation_preventDefault.html]
+[test_reportValidation_reset.html]
